# dazzle

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
cmake/: CMakeLists_imgui.txt  base_template.cmake  download_template.cmake  glad_download.cmake  glfw_download.cmake  imgui_download.cmake  jansson_download.cmake  jpp_download.cmake  macro.cmake  mingw_x64_clang_toolchains.cmake  nativefiledialog_download.cmake  stb_libs_download.cmake  win32_template.cmake
cmake/dependencies/: CMakeLists.txt
cmake/dependencies/imgui/: CMakeLists.txt
cmake/dependencies/imgui_glfw/: CMakeLists.txt
cmake/dependencies/imgui_opengl3/: CMakeLists.txt
cmake/dependencies/jansson/: CMakeLists.txt
cmake/dependencies/minizip/: CMakeLists.txt
cmake/dependencies/nativefiledialog/: CMakeLists.txt
cmake/dependencies/zlib/: CMakeLists.txt
cmake/depends_win32/: CMakeLists.txt
cmake/downloads/: CMakeLists.txt
cmake/solution_win32/: CMakeLists.txt
editor/: CMakeLists.txt
editor/cmake/: CMakeLists_imgui.txt  imgui_download.cmake  stb_libs_download.cmake
editor/src/: curve.hpp  editor.cpp  editor.h  main.cpp  opengl.cpp  opengl.h
example/: .gitignore  CMakeLists.txt
example/src/: main.cpp  opengl.cpp
include/dazzle/: config.h  dazzle.h  dazzle.hpp  dazzle_aux.h  dazzle_aux.hpp  dazzle_read.h  dazzle_read.hpp  dazzle_write.h  dazzle_write.hpp
src/: affector.h  affector_data.h  alloc.h  atlas.h  constant65535.h  dazzle.c  dazzle_aux.c  dazzle_read.c  dazzle_write.c  effect.h  emitter.h  emitter_data.h  instance.h  list.h  malloc.h  material.h  math.h  particle.h  service.h  shape.h  shape_data.h  texture.h  timeline_interpolate.h  timeline_key.h  timeline_value.h
tests/: CMakeLists.txt  test_memory_leak.c
tools/: CMakeLists.txt
tools/editor/: CMakeLists.txt
tools/editor/src/: curve.hpp  editor.cpp  editor.h  main.cpp
tools/evict/: CMakeLists.txt
tools/evict/include/evict/: evict.hpp
tools/evict/src/: evict.cpp
tools/example/: CMakeLists.txt
tools/example/src/: main.cpp
tools/render/: CMakeLists.txt
tools/render/include/render/: render.h  render.hpp
tools/render/src/: render.c  render.cpp
