CMAKE_MINIMUM_REQUIRED(VERSION 3.2)

MESSAGE("CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")
MESSAGE("CMAKE_GENERATOR: ${CMAKE_GENERATOR}")
MESSAGE("CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")

PROJECT(dazzle C)

OPTION(DAZZLE_INSTALL "DAZZLE_INSTALL" OFF)

MESSAGE("DAZZLE_EXTERNAL_BUILD: ${DAZZLE_EXTERNAL_BUILD}")
MESSAGE("DAZZLE_EDITOR_BUILD: ${DAZZLE_EDITOR_BUILD}")
MESSAGE("DAZZLE_EXAMPLE_BUILD: ${DAZZLE_EXAMPLE_BUILD}")
MESSAGE("DAZZLE_INSTALL: ${DAZZLE_INSTALL}")
MESSAGE("DAZZLE_TESTS: ${DAZZLE_TESTS}")
MESSAGE("DAZZLE_TESTS_IN_SOLUTIONS: ${DAZZLE_TESTS_IN_SOLUTIONS}")

set(DAZZLE_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/src/affector.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/alloc.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/atlas.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/dazzle.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/effect.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/emitter.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/material.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/math.h    
    ${CMAKE_CURRENT_SOURCE_DIR}/src/particle.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/service.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/shape.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/texture.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/timeline_interpolate.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/timeline_key.h
)

set(DAZZLE_HEADERS
    ${CMAKE_CURRENT_SOURCE_DIR}/include/dazzle/config.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/dazzle/dazzle.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/dazzle/dazzle.hpp
)

include_directories(${PROJECT_NAME} ${DAZZLE_INCLUDE_DIR})

add_library(${PROJECT_NAME} STATIC ${DAZZLE_SOURCES} ${DAZZLE_HEADERS})

if(DAZZLE_INSTALL)
    install(DIRECTORY include
        DESTINATION .
        FILES_MATCHING PATTERN "*.hpp" PATTERN "*.h")

    install(TARGETS ${PROJECT_NAME}
            LIBRARY DESTINATION lib
            ARCHIVE DESTINATION lib)
endif()