CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

OPTION(DAZZLE_DEPENDENCE_ZLIB "zlib" ON)
OPTION(DAZZLE_DEPENDENCE_JANSSON "jansson" ON)
OPTION(DAZZLE_DEPENDENCE_JPP "jpp" ON)
OPTION(DAZZLE_DEPENDENCE_GLAD "glad" ON)
OPTION(DAZZLE_DEPENDENCE_GLFW3 "glfw3" ON)
OPTION(DAZZLE_DEPENDENCE_IMGUI "imgui" ON)
OPTION(DAZZLE_DEPENDENCE_GRAPHICS "graphics" ON)
OPTION(DAZZLE_DEPENDENCE_NATIVEFILEDIALOG "nativefiledialog" ON)

MESSAGE("DAZZLE_DEPENDENCE_ZLIB: ${DAZZLE_DEPENDENCE_ZLIB}")
MESSAGE("DAZZLE_DEPENDENCE_JANSSON: ${DAZZLE_DEPENDENCE_JANSSON}")
MESSAGE("DAZZLE_DEPENDENCE_JPP: ${DAZZLE_DEPENDENCE_JPP}")
MESSAGE("DAZZLE_DEPENDENCE_GLAD: ${DAZZLE_DEPENDENCE_GLAD}")
MESSAGE("DAZZLE_DEPENDENCE_GLFW3: ${DAZZLE_DEPENDENCE_GLFW3}")
MESSAGE("DAZZLE_DEPENDENCE_IMGUI: ${DAZZLE_DEPENDENCE_IMGUI}")
MESSAGE("DAZZLE_DEPENDENCE_GRAPHICS: ${DAZZLE_DEPENDENCE_GRAPHICS}")
MESSAGE("DAZZLE_DEPENDENCE_NATIVEFILEDIALOG: ${DAZZLE_DEPENDENCE_NATIVEFILEDIALOG}")

PROJECT(dependencies)

message("============@@##START##@@============")

#dependencies zlib
if(DAZZLE_DEPENDENCE_ZLIB)
    message("================zlib================")
    
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/zlib/CMakeLists.txt ${DAZZLE_THIRDPARTY_DIR}/zlib/CMakeLists.txt COPYONLY)
    
    ADD_SUBDIRECTORY(${DAZZLE_THIRDPARTY_DIR}/zlib ${CMAKE_TEMP_DIR}/zlib)
    
    set(ZLIB_LIBRARY zlib CACHE STRING "ZLIB_LIBRARY" FORCE)
    set(ZLIB_INCLUDE_DIR "${DAZZLE_THIRDPARTY_CONFIG_DIR}/zlib;${DAZZLE_THIRDPARTY_DIR}/zlib" CACHE INTERNAL "ZLIB_INCLUDE_DIR" FORCE)
    
    message("ZLIB_LIBRARY: ${ZLIB_LIBRARY}")
    message("ZLIB_INCLUDE_DIR: ${ZLIB_INCLUDE_DIR}")
    
    ADD_SUBDIRECTORY(minizip)
    
    set(MINIZIP_INCLUDE_DIR "${DAZZLE_THIRDPARTY_DIR}/zlib/contrib/minizip" CACHE INTERNAL "MINIZIP_INCLUDE_DIR" FORCE)
endif()

#dependencies graphics
if(DAZZLE_DEPENDENCE_GRAPHICS)
    message("================graphics================")
    
    set(GRAPHICS_EXTERNAL_BUILD ON CACHE BOOL "GRAPHICS_EXTERNAL_BUILD" FORCE)
    set(GRAPHICS_EXAMPLES_BUILD OFF CACHE BOOL "GRAPHICS_EXAMPLES_BUILD" FORCE)
    set(GRAPHICS_INSTALL OFF CACHE BOOL "GRAPHICS_INSTALL" FORCE)
    set(GRAPHICS_TESTS OFF CACHE BOOL "GRAPHICS_TESTS" FORCE)
    set(GRAPHICS_TESTS_IN_SOLUTIONS OFF CACHE BOOL "GRAPHICS_TESTS_IN_SOLUTIONS" FORCE)
    
    ADD_SUBDIRECTORY(${DAZZLE_THIRDPARTY_DIR}/graphics ${CMAKE_TEMP_DIR}/graphics)
endif()

#dependencies jansson
if(DAZZLE_DEPENDENCE_JANSSON)
    message("================jansson================")
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/jansson/CMakeLists.txt ${DAZZLE_THIRDPARTY_DIR}/jansson/CMakeLists.txt COPYONLY)
   
    set(USE_URANDOM OFF CACHE BOOL "USE_URANDOM" FORCE)
    set(USE_WINDOWS_CRYPTOAPI OFF CACHE BOOL "USE_URANDOM" FORCE)
    set(JANSSON_STATIC_CRT ON CACHE BOOL "JANSSON_STATIC_CRT" FORCE)
    set(JANSSON_EXAMPLES OFF CACHE BOOL "USE_URANDOM" FORCE)
    set(JANSSON_BUILD_DOCS OFF CACHE BOOL "JANSSON_BUILD_DOCS" FORCE)
    set(JANSSON_WITHOUT_TESTS ON CACHE BOOL "JANSSON_WITHOUT_TESTS" FORCE)
    set(JANSSON_INSTALL ON CACHE BOOL "JANSSON_INSTALL" FORCE)

    ADD_SUBDIRECTORY(${DAZZLE_THIRDPARTY_DIR}/jansson ${CMAKE_TEMP_DIR}/jansson)
    
    set(JANSSON_INCLUDE_DIRS "${DAZZLE_THIRDPARTY_CONFIG_DIR}/jansson/include" CACHE INTERNAL "JANSSON_INCLUDE_DIRS" FORCE)
    
    message("JANSSON_INCLUDE_DIRS: ${JANSSON_INCLUDE_DIRS}")
endif()

#dependencies jpp
if(DAZZLE_DEPENDENCE_JPP)
    message("================jpp================")
    set(JPP_EXTERNAL_BUILD ON CACHE BOOL "JPP_EXTERNAL_BUILD" FORCE)
    set(JPP_JANSSON_INCLUDE_PATH ${JANSSON_INCLUDE_DIRS} CACHE STRING "JPP_JANSSON_INCLUDE_PATH" FORCE)
    set(JPP_TEST OFF CACHE BOOL "JPP_TEST" FORCE)
    set(JPP_INSTALL OFF CACHE BOOL "JPP_INSTALL" FORCE)    

    ADD_SUBDIRECTORY(${DAZZLE_THIRDPARTY_DIR}/jpp ${CMAKE_TEMP_DIR}/jpp)
    add_dependencies(jpp jansson)
endif()

#dependencies imgui
if(DAZZLE_DEPENDENCE_IMGUI)
    message("================imgui================")
    
    ADD_SUBDIRECTORY(imgui)
    ADD_SUBDIRECTORY(imgui_glfw)
    ADD_SUBDIRECTORY(imgui_opengl3)
endif()

#dependencies glad
if(DAZZLE_DEPENDENCE_GLAD)
    message("================glad================")
    set(GLAD_INSTALL ON CACHE BOOL "GLAD_INSTALL" FORCE)
    set(USE_MSVC_RUNTIME_LIBRARY_DLL OFF CACHE BOOL "GLAD_INSTALL" FORCE)
    set(GLAD_OUT_DIR "${DAZZLE_THIRDPARTY_DIR}/glad" CACHE STRING "GLAD_OUT_DIR" FORCE)

    ADD_SUBDIRECTORY(${DAZZLE_THIRDPARTY_DIR}/glad ${CMAKE_TEMP_DIR}/glad)
endif()

#dependencies glfw3
if(DAZZLE_DEPENDENCE_GLFW3)
    message("================glfw3================")
    set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "GLFW_BUILD_EXAMPLES" FORCE)
    set(GLFW_BUILD_TESTS OFF CACHE BOOL "GLFW_BUILD_TESTS" FORCE)
    set(GLFW_BUILD_DOCS OFF CACHE BOOL "GLFW_BUILD_DOCS" FORCE)
    set(GLFW_INSTAL OFF CACHE BOOL "GLFW_INSTAL" FORCE)
    set(GLFW_VULKAN_STATIC OFF CACHE BOOL "GLFW_VULKAN_STATIC" FORCE)

    ADD_SUBDIRECTORY(${DAZZLE_THIRDPARTY_DIR}/glfw3 ${CMAKE_TEMP_DIR}/glfw3)
endif()

if(DAZZLE_DEPENDENCE_NATIVEFILEDIALOG)
    ADD_SUBDIRECTORY(nativefiledialog)
endif()

message("============@@##COMPLETE##@@============")