CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

OPTION(DAZZLE_EDITOR_BUILD "DAZZLE_EDITOR_BUILD" ON)
OPTION(DAZZLE_EXAMPLE_BUILD "DAZZLE_EXAMPLE_BUILD" ON)
OPTION(DAZZLE_TESTS "DAZZLE_TESTS" OFF)
OPTION(DAZZLE_TESTS_IN_SOLUTIONS "DAZZLE_TESTS_IN_SOLUTIONS" ON)

PROJECT(depends_win32)

INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/../base_template.cmake)
INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/../win32_template.cmake)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${DAZZLE_THIRDPARTY_LIB_OUT})
SET(CMAKE_TEMP_DIR ${CMAKE_BINARY_DIR}/dependencies)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../dependencies ${CMAKE_TEMP_DIR})